@@ -1,6 +1,6 @@
 @comment{{This file has been generated by bib2bib 1.94}}
 
-@comment{{Command line: /usr/bin/bib2bib -c '$key="ayad10ijcar" or $key="CoqArt" or $key="conchon08smt" or $key="paskevich09rr" or $key="z3" or $key="ergo" or $key="simplify05" or $key="DM06" or $key="BarTin-CAV-07" or $key="melquiond08rnc" or $key="filliatre07cav" or 1=2' /home/cmarche/biblio/abbrevs.bib /home/cmarche/biblio/demons.bib /home/cmarche/biblio/demons2.bib /home/cmarche/biblio/demons3.bib /home/cmarche/biblio/team.bib /home/cmarche/biblio/crossrefs.bib /home/cmarche/biblio/crossrefs2.bib}}
+@comment{{Command line: /usr/bin/bib2bib -c '$key="schulz04ijcar" or $key="ayad10ijcar" or $key="CoqArt" or $key="conchon08smt" or $key="paskevich09rr" or $key="z3" or $key="ergo" or $key="simplify05" or $key="DM06" or $key="BarTin-CAV-07" or $key="vstte10comp" or $key="melquiond08rnc" or $key="filliatre07cav" or $key="okasaki98" or $key="boogie11why3" or 1=2' /home/cmarche/biblio/abbrevs.bib /home/cmarche/biblio/demons.bib /home/cmarche/biblio/demons2.bib /home/cmarche/biblio/demons3.bib /home/cmarche/biblio/team.bib /home/cmarche/biblio/crossrefs.bib /home/cmarche/biblio/crossrefs2.bib}}
 
 @string{sv = {Springer}}
 
@@ -58,6 +58,35 @@
   note = {\url{http://research.microsoft.com/projects/z3/}}
 }
 
+@inproceedings{schulz04ijcar,
+  author = {S. Schulz},
+  title = {{System Description: E~0.81}},
+  booktitle = {Proc.\ of the 2nd IJCAR, Cork, Ireland},
+  editor = {D. Basin and M. Rusinowitch},
+  volume = 3097,
+  series = {LNAI},
+  year = 2004,
+  publisher = {Springer},
+  pages = {223--228}
+}
+
+@misc{vstte10comp,
+  author = {Natarajan Shankar and Peter Mueller},
+  title = {{Verified Software: Theories, Tools and Experiments
+                  (VSTTE'10). Software Verification Competition}},
+  month = {August},
+  year = 2010,
+  address = {Edinburgh, Scotland},
+  note = {\url{http://www.macs.hw.ac.uk/vstte10/Competition.html}}
+}
+
+@book{okasaki98,
+  author = {Chris Okasaki},
+  title = {{Purely Functional Data Structures}},
+  publisher = {Cambridge University Press},
+  year = 1998
+}
+
 @inproceedings{conchon08smt,
   author = {Fran\c{c}ois Bobot and Sylvain Conchon and \'Evelyne Contejean
   and St\'ephane Lescuyer},
@@ -87,7 +116,8 @@
   author = {Sylvain Conchon and \'Evelyne Contejean},
   title = {The {Alt-Ergo} automatic Theorem Prover},
   url = {http://alt-ergo.lri.fr/},
-  note = {\url{http://alt-ergo.lri.fr/}},
+  howpublished = {\url{http://alt-ergo.lri.fr/}},
+  note = {APP deposit under the number IDDN FR 001 110026 000 S P 2010 000 1000},
   topics = {team,lri},
   year = 2008,
   x-equipes = {demons PROVAL},
@@ -119,8 +149,6 @@
   address = {Santiago de Compostela, Spain},
   year = {2008},
   pages = {93--102},
-  note = {\url{http://gappa.gforge.inria.fr/}},
-  url = {http://gappa.gforge.inria.fr/},
   x-equipes = {demons PROVAL},
   x-type = {article},
   x-support = {actes},
@@ -129,7 +157,7 @@
   x-editorial-board = {yes},
   x-international-audience = {yes},
   x-proceedings = {yes},
-  x-pdf = {http://www.msr-inria.inria.fr/~gmelquio/doc/08-rnc8-article.pdf}
+  x-pdf = {http://www.lri.fr/~melquion/doc/08-rnc8-article.pdf}
 }
 
 @techreport{paskevich09rr,
@@ -140,7 +168,7 @@
   topics = {team},
   hal = {http://hal.inria.fr/inria-00439232/en/},
   note = {\url{http://hal.inria.fr/inria-00439232/en/}},
-  number = {RR-7128}
+  number = 7128
 }
 
 @inproceedings{ayad10ijcar,
@@ -148,8 +176,37 @@
   title = {Multi-Prover Verification of Floating-Point Programs},
   crossref = {ijcar10},
   url = {http://www.lri.fr/~marche/ayad10ijcar.pdf},
+  x-equipes = {demons PROVAL EXT},
   topics = {team},
-  type_publi = {icolcomlec}
+  type_publi = {icolcomlec},
+  x-international-audience = {yes},
+  x-proceedings = {yes},
+  x-support = {actes},
+  x-cle-support = {IJCAR},
+  x-type = {article},
+  x-editorial-board = {yes}
+}
+
+@inproceedings{boogie11why3,
+  author = {Fran\c{c}ois Bobot and Jean-Christophe Filli\^atre and
+Claude March\'e and Andrei Paskevich},
+  title = {Why3: Shepherd Your Herd of Provers},
+  topics = {team},
+  booktitle = {Boogie 2011: First International Workshop on Intermediate Verification Languages},
+  year = 2011,
+  address = {Wroc\l{}aw, Poland},
+  month = {August},
+  url = {http://proval.lri.fr/submissions/boogie11.pdf},
+  abstract = {Why3 is the next generation of the
+  Why software verification platform. 
+  Why3 clearly separates the purely logical
+  specification part from generation of verification conditions for programs.
+  This article focuses on the former part.
+  Why3 comes with a new enhanced language of
+  logical specification. It features a rich library of
+  proof task transformations that can be chained to produce a suitable
+  input for a large set of theorem provers, including SMT solvers,
+  TPTP provers, as well as interactive proof assistants.}
 }
 
 @proceedings{ijcar10,
@@ -175,30 +232,3 @@
   year = {2007}
 }
 
-@InProceedings{schulz04ijcar,
-  author =       {S. Schulz},
-  title =        {{System Description: E~0.81}},
-  booktitle =    {Proc.\ of the 2nd IJCAR, Cork, Ireland},
-  editor =       {D. Basin and M. Rusinowitch},
-  volume =       3097,
-  series =       {LNAI},
-  year =         2004,
-  publisher =    {Springer},
-  pages =        {223--228},
-}
-
-@Misc{vstte10comp,
-  author =    {Natarajan Shankar and Peter Mueller},
-  title =     {{Verified Software: Theories, Tools and Experiments
-                  (VSTTE'10). Software Verification Competition}},
-  month =     {August},
-  year =      2010,
-  address = {Edinburgh, Scotland},
-  note =      {\url{http://www.macs.hw.ac.uk/vstte10/Competition.html}}}
-
-@BOOK{okasaki98,
-  author = {Chris Okasaki},
-  title = {{Purely Functional Data Structures}},
-  publisher = {Cambridge University Press},
-  year = 1998
-}
