@@ -94,15 +94,14 @@ $^2$ INRIA Saclay - \^Ile-de-France, ProVal, Orsay, F-91893
 \chapter*{Foreword}
 
 This is the manual for the Why platform version 3, or \why for
-short. \why is a complete reimplementation of the former Why
-platform~\cite{filliatre07cav} for program verification. Among
-the new features are: numerous extensions to the input language,
-a new architecture for calling external provers, and a
-well-designed API, allowing to use \why as a software library.
-An important emphasis is put on modularity and genericity,
-giving the end user a possibility to easily reuse \why
-formalizations or to add support for a new external
-prover if wanted.
+short. \why is a complete reimplementation~\cite{boogie11why3} of the former Why
+platform~\cite{filliatre07cav} for program
+verification. Among the new features are: numerous
+extensions to the input language, a new architecture for calling
+external provers, and a well-designed API, allowing to use \why as a
+software library.  An important emphasis is put on modularity and
+genericity, giving the end user a possibility to easily reuse \why
+formalizations or to add support for a new external prover if wanted.
 
 \subsection*{Availability}
 
