@@ -4,43 +4,10 @@
  <file name="../hello_proof.why" verified="false" expanded="true">
   <theory name="HelloProof" verified="false" expanded="true">
    <goal name="G1" sum="da0794d2f4de035d230d26e93d3e1afe" proved="false" expanded="true">
-    <proof prover="simplify" timelimit="10" edited="" obsolete="true">
-     <result status="valid" time="0.01"/>
-    </proof>
    </goal>
    <goal name="G2" sum="07e54d9a25fa3174d5d5bf7ce71a13dc" proved="false" expanded="true">
-    <proof prover="alt-ergo" timelimit="10" edited="" obsolete="true">
-     <result status="unknown" time="0.02"/>
-    </proof>
-    <proof prover="simplify" timelimit="10" edited="" obsolete="true">
-     <result status="unknown" time="0.01"/>
-    </proof>
-    <transf name="split_goal" proved="false" expanded="true">
-     <goal name="G2.1" sum="f7915ef009bdd949e4af326643583051" proved="false" expanded="true">
-      <proof prover="coq" timelimit="10" edited="" obsolete="true">
-       <result status="unknown" time="0.46"/>
-      </proof>
-      <proof prover="alt-ergo" timelimit="10" edited="" obsolete="true">
-       <result status="unknown" time="0.02"/>
-      </proof>
-      <proof prover="simplify" timelimit="10" edited="" obsolete="true">
-       <result status="unknown" time="0.01"/>
-      </proof>
-     </goal>
-     <goal name="G2.2" sum="c53f58872dc3cb71805234ace78f1c2d" proved="false" expanded="true">
-      <proof prover="simplify" timelimit="10" edited="" obsolete="true">
-       <result status="valid" time="0.01"/>
-      </proof>
-     </goal>
-    </transf>
    </goal>
    <goal name="G3" sum="8813554ea4313f64f3efc3330036b5e9" proved="false" expanded="true">
-    <proof prover="alt-ergo" timelimit="10" edited="" obsolete="true">
-     <result status="valid" time="0.01"/>
-    </proof>
-    <proof prover="simplify" timelimit="10" edited="" obsolete="true">
-     <result status="unknown" time="0.01"/>
-    </proof>
    </goal>
   </theory>
  </file>
