@@ -1,5 +1,7 @@
 * marks an incompatible change
 
+  o [IDE] interactive detection of provers disabled because incompatible
+    with session. Detection must be done with why3config --detect-provers
   o WhyML with mutable record fields and type models
   o why3replayer
   * "parameter" keyword renamed to "val"
